Add jquery and bootstrap

--- a/bower.json
+++ b/bower.json
@@ -2,9 +2,11 @@
   "name": "trello-github",
   "private": true,
   "version": "0.0.0",
-  "dependencies": {},
+  "dependencies": {
+    "jquery": "3.2.1"
+  },
   "devDependencies": {
-    "chai": "^4.0.2",
-    "mocha": "^3.4.2"
+    "chai": "4.0.2",
+    "mocha": "3.4.2"
   }
 }
