--- a/app/manifest.json
+++ b/app/manifest.json
@@ -14,7 +14,9 @@
       "scripts/background.js"
     ]
   },
-  "permissions": [],
+  "permissions": [
+    "storage"
+  ],
   "browser_action": {
     "default_icon": {
       "19": "images/icon-19.png",
