--- a/app/manifest.json
+++ b/app/manifest.json
@@ -17,6 +17,18 @@
   "permissions": [
     "storage"
   ],
+  "content_scripts": [
+    {
+      "matches": [
+        "https://trello.com/*"
+      ],
+      "js": [
+        "scripts/contentscript.js"
+      ],
+      "run_at": "document_end",
+      "all_frames": false
+    }
+  ],
   "browser_action": {
     "default_icon": {
       "19": "images/icon-19.png",
