Add our custom button when the list we want to add it to is loaded

--- a/app/manifest.json
+++ b/app/manifest.json
@@ -23,6 +23,7 @@
         "https://trello.com/*"
       ],
       "js": [
+        "bower_components/jquery/dist/jquery.min.js",
         "scripts/contentscript.js"
       ],
       "run_at": "document_end",
