Allow content script to make requests to github

--- a/app/manifest.json
+++ b/app/manifest.json
@@ -15,7 +15,8 @@
     ]
   },
   "permissions": [
-    "storage"
+    "storage",
+    "https://api.github.com/"
   ],
   "content_scripts": [
     {
